- Removed pseudocron granularity preferences
- cms_alert() and the new cms_confirm() javascript functions now return promises.
- fix problems with the OneEleven theme
   - fixed sidenav now works properly.  if sidenav is larger than viewport then don't use fixed... easy
   - now revert to small sidebar navigation (still floating) if screen is too narrow.
- Fixes to the cache clearing methodology

Installation Assistant v1.2.1
- Only create dummy index.html files in subdirectories we created.
- Clear cache after step 9

CmsJobManager
- New core module to handle queued asynchronous tasks.

Content Manager
- Minor tweak to bulk delete pages.
- Minor fix to the active tab when changing a template or design.

DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move
- Modify the edit-design functionality to allow clicking on an attached template or stylesheet to edit it.
- Generic templates now display a usage string.
- When creating a new template, associate the new template with the default design.
- Add reset buttons to the filter forms.

News v2.50.5
- Minor fix to add category.
- Removes GetNotificationOutput method.
- adda a task that runs at least every 15 minutes to detect draft articles... create an alert for this.
- add an option to never create alerts about draft News articles.

FileManager v1.6
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)

Search
- Convert to store all data using the InnoDB engine