@@ -84,11 +84,13 @@ final class CMS_Content_Block
         if( !$rec['name'] ) $rec['name'] = $rec['id'] = 'content_en';
         if( !$rec['id'] ) $rec['id'] = str_replace(' ','_',$rec['name']);
 
-        // check for duplicate.
+        /*
+        // check for duplicate
         if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
+        */
 
         // set priority
-        if( !$rec['priority'] ) {
+        if( empty($rec['priority']) || !$rec['priority'] ) {
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
@@ -116,11 +118,13 @@ final class CMS_Content_Block
         }
         if( !$rec['id'] ) $rec['id'] = str_replace(' ','_',$rec['name']);
 
+        /*
         // check for duplicate.
         if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
+        */
 
         // set priority
-        if( !$rec['priority'] ) {
+        if( empty($rec['priority']) || $rec['priority'] == 0 ) {
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
@@ -157,11 +161,13 @@ final class CMS_Content_Block
         $rec['params'] = $parms;
         if( $rec['module'] == '' ) throw new CmsEditContentException('Missing module param for content_module tag');
 
+        /*
         // check for duplicate.
         if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
+        */
 
         // set priority
-        if( !$rec['priority'] ) {
+        if( empty($rec['priority']) || !$rec['priority'] ) {
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
